[package]
name = "rumpus_ros"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.3"
chrono = "0.4.41"
chrono_gpst = "0.1.3"
clap = { version = "4.5.45", features = ["derive"] }
image = "0.25.6"
rayon = "1.11.0"
rosbags-rs = { version = "0.3.4", default-features = false }
rumpus = { git = "https://github.com/benjaminpotter/rumpus.git", tag = "0.3.0-rc.2" }
sguaba = "0.9.4"
uom = "0.37.0"
